# renk

./: .env.default  .gitignore  Cargo.toml  LICENSE  README.md
config/: renk.json
src/: color.rs  main.rs  palette.rs  sources.rs
src/converters/: mod.rs  tailwind.rs  text.rs
src/exporters/: gpl.rs  inkscape.rs  mod.rs  scribus.rs  scribusstd.rs  soc.rs
src/formatters/: gpl.rs  mod.rs  scribus.rs  soc.rs
src/writers/: file_writer.rs  mod.rs  stdout_writer.rs
