[package]
name = "renk"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[dependencies]
dirs = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
palette = "0.6"
quick-xml = { version = "0.23", features = ["serialize"] }

[build-dependencies]
dotenvy = "0.15.7"
